syntax = "proto3";

option go_package = "protocols/hello";

message HelloRequest {
  string clientType = 1;
  string messageBody = 2;
}

message HelloResponse {
  string messageBody = 1;
}